--- a/prepros.cfg
+++ b/prepros.cfg
@@ -116,22 +116,6 @@
           "parents": [],
           "type": "javascript"
         },
-        "6266f912": {
-          "id": "6266f912",
-          "path": "js/jquery.bxslider.min.js",
-          "output": "js/jquery.bxslider.min-dist.js",
-          "name": "jquery.bxslider.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "4455d8e4": {
           "id": "4455d8e4",
           "path": "js/jquery.fancybox.pack.js",
@@ -453,6 +437,296 @@
           "size": 2391,
           "type": "jpg",
           "initialSize": 2391,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e6dc5c7f": {
+          "id": "e6dc5c7f",
+          "path": "js/fotorama.js",
+          "output": "js/fotorama-dist.js",
+          "name": "fotorama.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "d35bf31e": {
+          "id": "d35bf31e",
+          "path": "services.html",
+          "output": "services.html",
+          "name": "services.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "fc096a93": {
+          "id": "fc096a93",
+          "path": "img/content_img2.jpg",
+          "output": "img/content_img2.jpg",
+          "name": "content_img2.jpg",
+          "category": "IMAGE",
+          "size": 51674,
+          "type": "jpg",
+          "initialSize": 51674,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e5a62bf1": {
+          "id": "e5a62bf1",
+          "path": "img/social_icon1.png",
+          "output": "img/social_icon1.png",
+          "name": "social_icon1.png",
+          "category": "IMAGE",
+          "size": 707,
+          "type": "png",
+          "initialSize": 707,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "01c4fd10": {
+          "id": "01c4fd10",
+          "path": "img/social_icon2.png",
+          "output": "img/social_icon2.png",
+          "name": "social_icon2.png",
+          "category": "IMAGE",
+          "size": 778,
+          "type": "png",
+          "initialSize": 778,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "aef558f7": {
+          "id": "aef558f7",
+          "path": "img/social_icon3.png",
+          "output": "img/social_icon3.png",
+          "name": "social_icon3.png",
+          "category": "IMAGE",
+          "size": 558,
+          "type": "png",
+          "initialSize": 558,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "c52ccbe9": {
+          "id": "c52ccbe9",
+          "path": "img/social_icon4.png",
+          "output": "img/social_icon4.png",
+          "name": "social_icon4.png",
+          "category": "IMAGE",
+          "size": 616,
+          "type": "png",
+          "initialSize": 616,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a2db3cef": {
+          "id": "a2db3cef",
+          "path": "img/social_icon5.png",
+          "output": "img/social_icon5.png",
+          "name": "social_icon5.png",
+          "category": "IMAGE",
+          "size": 784,
+          "type": "png",
+          "initialSize": 784,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "f2f28cde": {
+          "id": "f2f28cde",
+          "path": "video.html",
+          "output": "video.html",
+          "name": "video.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "3992f744": {
+          "id": "3992f744",
+          "path": "portfolio.html",
+          "output": "portfolio.html",
+          "name": "portfolio.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "c504de74": {
+          "id": "c504de74",
+          "path": "sass/_fotorama.scss",
+          "output": "css/_fotorama.css",
+          "name": "_fotorama.scss",
+          "category": "CSS",
+          "autoCompile": false,
+          "autoprefixer": false,
+          "sourceMaps": false,
+          "libSass": true,
+          "compass": false,
+          "fullCompass": false,
+          "outputStyle": "expanded",
+          "customOutput": false,
+          "imported": true,
+          "parents": [
+            "bb0094b8"
+          ],
+          "type": "sass"
+        },
+        "10d71afd": {
+          "id": "10d71afd",
+          "path": "img/icon_fullscreen.png",
+          "output": "img/icon_fullscreen.png",
+          "name": "icon_fullscreen.png",
+          "category": "IMAGE",
+          "size": 324,
+          "type": "png",
+          "initialSize": 324,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "cfc63d4e": {
+          "id": "cfc63d4e",
+          "path": "img/icon_fullscreen@2x.png",
+          "output": "img/icon_fullscreen@2x.png",
+          "name": "icon_fullscreen@2x.png",
+          "category": "IMAGE",
+          "size": 397,
+          "type": "png",
+          "initialSize": 397,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "a9da36a7": {
+          "id": "a9da36a7",
+          "path": "img/icon_fullscreen_close.png",
+          "output": "img/icon_fullscreen_close.png",
+          "name": "icon_fullscreen_close.png",
+          "category": "IMAGE",
+          "size": 318,
+          "type": "png",
+          "initialSize": 318,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "38c850ef": {
+          "id": "38c850ef",
+          "path": "img/icon_fullscreen_close@2x.png",
+          "output": "img/icon_fullscreen_close@2x.png",
+          "name": "icon_fullscreen_close@2x.png",
+          "category": "IMAGE",
+          "size": 385,
+          "type": "png",
+          "initialSize": 385,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2bdfa23f": {
+          "id": "2bdfa23f",
+          "path": "img/left_arrow.png",
+          "output": "img/left_arrow.png",
+          "name": "left_arrow.png",
+          "category": "IMAGE",
+          "size": 371,
+          "type": "png",
+          "initialSize": 371,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ce0e0f07": {
+          "id": "ce0e0f07",
+          "path": "img/left_arrow@2x.png",
+          "output": "img/left_arrow@2x.png",
+          "name": "left_arrow@2x.png",
+          "category": "IMAGE",
+          "size": 633,
+          "type": "png",
+          "initialSize": 633,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "ebdbb2cd": {
+          "id": "ebdbb2cd",
+          "path": "img/right_arrow.png",
+          "output": "img/right_arrow.png",
+          "name": "right_arrow.png",
+          "category": "IMAGE",
+          "size": 366,
+          "type": "png",
+          "initialSize": 366,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "5917e098": {
+          "id": "5917e098",
+          "path": "img/right_arrow@2x.png",
+          "output": "img/right_arrow@2x.png",
+          "name": "right_arrow@2x.png",
+          "category": "IMAGE",
+          "size": 619,
+          "type": "png",
+          "initialSize": 619,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "728e3db0": {
+          "id": "728e3db0",
+          "path": "img/fotorama.png",
+          "output": "img/fotorama.png",
+          "name": "fotorama.png",
+          "category": "IMAGE",
+          "size": 3182,
+          "type": "png",
+          "initialSize": 3182,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "eedbb247": {
+          "id": "eedbb247",
+          "path": "css/fotorama.png",
+          "output": "css/fotorama.png",
+          "name": "fotorama.png",
+          "category": "IMAGE",
+          "size": 3182,
+          "type": "png",
+          "initialSize": 3182,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "cd76a4a1": {
+          "id": "cd76a4a1",
+          "path": "img/slider.jpg",
+          "output": "img/slider.jpg",
+          "name": "slider.jpg",
+          "category": "IMAGE",
+          "size": 75904,
+          "type": "jpg",
+          "initialSize": 75904,
           "optimized": false,
           "height": 0,
           "width": 0
